infra/k8s-prod/namespace.yaml
kind: Namespace
apiVersion: v1
metadata:
  name: resizer
  labels:
    name: resizer
