infra/k8s-prod/testifier-depl.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: resizer
  namespace: resizer
spec:
  progressDeadlineSeconds: 600
  replicas: 4
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      app: resizer
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: resizer
    spec:
      containers:
        - image: newsifiercom/resizer:v10
          imagePullPolicy: Always
          name: resizer
          resources:
            limits:
              cpu: "2"
              memory: 1350Mi
            requests:
              cpu: 760m
              memory: 1300Mi
          terminationMessagePath: /dev/termination-log
          terminationMessagePolicy: File
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext: {}
      terminationGracePeriodSeconds: 30

---
apiVersion: v1
kind: Service
metadata:
  name: resizer-srv
  namespace: resizer
spec:
  ports:
    - name: resizer
      port: 8080
      protocol: TCP
      targetPort: 8080
  selector:
    app: resizer
  sessionAffinity: None
  type: ClusterIP
